--- a/CoSN-shadowrocket.conf
+++ b/CoSN-shadowrocket.conf
@@ -10,6 +10,28 @@ private-ip-answer = true
 update-url = https://raw.githubusercontent.com/sontt9/CoSN/master/CoSN-shadowrocket.conf
 
 [Rule]
+# Shopee Adblock Rules
+DOMAIN-SUFFIX,patronus.idata.shopeemobile.com,REJECT
+DOMAIN-SUFFIX,live-apm.shopee.vn,REJECT
+DOMAIN-SUFFIX,df.infra.sz.shopee.vn,REJECT
+DOMAIN-SUFFIX,iv-datatracker.spx.shopee.sg,REJECT
+DOMAIN-SUFFIX,event-receiver.shopee.vn,REJECT
+DOMAIN-SUFFIX,remote-config.gslb.sgw.shopeemobile.com,REJECT
+DOMAIN-SUFFIX,ccms.shopee.io,REJECT
+DOMAIN-SUFFIX,deo.shopeemobile.com,REJECT
+DOMAIN-SUFFIX,app-vn.deo.susercontent.com,REJECT
+DOMAIN-SUFFIX,cdngarenanow-a.akamaihd.net,REJECT
+DOMAIN-SUFFIX,livetech.shopee.vn,REJECT
+DOMAIN-SUFFIX,livesteaming-api-dr.sp-cdn.susercontent.com,REJECT
+DOMAIN-SUFFIX,liveteam.sp-cdn.susercontent.com,REJECT
+DOMAIN-SUFFIX,down-ws-vn.img.susercontent.com,REJECT
+DOMAIN-SUFFIX,play-spe.livestream.shopee.co.id,REJECT
+DOMAIN-SUFFIX,seller.shopee.sg,REJECT
+DOMAIN-SUFFIX,sentry.io,REJECT
+DOMAIN-SUFFIX,shope.ee,REJECT
+DOMAIN-SUFFIX,check_channel.shopee.vn,REJECT
+
+# Original Rules
 RULE-SET,https://raw.githubusercontent.com/bigdargon/hostsVN/master/option/hostsVN-surge-exceptions-rule.conf,DIRECT
 RULE-SET,https://raw.githubusercontent.com/bigdargon/hostsVN/master/option/hostsVN-surge-rule.conf,REJECT
 #RULE-SET,https://raw.githubusercontent.com/bigdargon/hostsVN/master/option/hostsVN-surge-OTA.conf,REJECT
