--- a/CoSN-shadowrocket.conf
+++ b/CoSN-shadowrocket.conf
@@ -11,25 +11,25 @@ update-url = https://raw.githubusercontent.com/sontt9/CoSN/master/CoSN-shadowroc
 
 [Rule]
 # Shopee Adblock Rules
-DOMAIN-SUFFIX,patronus.idata.shopeemobile.com,REJECT
-DOMAIN-SUFFIX,live-apm.shopee.vn,REJECT
-DOMAIN-SUFFIX,df.infra.sz.shopee.vn,REJECT
-DOMAIN-SUFFIX,iv-datatracker.spx.shopee.sg,REJECT
-DOMAIN-SUFFIX,event-receiver.shopee.vn,REJECT
-DOMAIN-SUFFIX,remote-config.gslb.sgw.shopeemobile.com,REJECT
-DOMAIN-SUFFIX,ccms.shopee.io,REJECT
-DOMAIN-SUFFIX,deo.shopeemobile.com,REJECT
-DOMAIN-SUFFIX,app-vn.deo.susercontent.com,REJECT
-DOMAIN-SUFFIX,cdngarenanow-a.akamaihd.net,REJECT
-DOMAIN-SUFFIX,livetech.shopee.vn,REJECT
-DOMAIN-SUFFIX,livesteaming-api-dr.sp-cdn.susercontent.com,REJECT
-DOMAIN-SUFFIX,liveteam.sp-cdn.susercontent.com,REJECT
-DOMAIN-SUFFIX,down-ws-vn.img.susercontent.com,REJECT
-DOMAIN-SUFFIX,play-spe.livestream.shopee.co.id,REJECT
-DOMAIN-SUFFIX,seller.shopee.sg,REJECT
+DOMAIN-SUFFIX,patronus.idata.shopeemobile.com,REJECT-200
+DOMAIN-SUFFIX,live-apm.shopee.vn,REJECT-200
+DOMAIN-SUFFIX,df.infra.sz.shopee.vn,REJECT-200
+DOMAIN-SUFFIX,iv-datatracker.spx.shopee.sg,REJECT-200
+DOMAIN-SUFFIX,event-receiver.shopee.vn,REJECT-200
+DOMAIN-SUFFIX,remote-config.gslb.sgw.shopeemobile.com,REJECT-200
+DOMAIN-SUFFIX,ccms.shopee.io,REJECT-200
+DOMAIN-SUFFIX,deo.shopeemobile.com,REJECT-200
+DOMAIN-SUFFIX,app-vn.deo.susercontent.com,REJECT-200
+DOMAIN-SUFFIX,cdngarenanow-a.akamaihd.net,REJECT-200
+DOMAIN-SUFFIX,livetech.shopee.vn,REJECT-200
+DOMAIN-SUFFIX,livesteaming-api-dr.sp-cdn.susercontent.com,REJECT-200
+DOMAIN-SUFFIX,liveteam.sp-cdn.susercontent.com,REJECT-200
+DOMAIN-SUFFIX,down-ws-vn.img.susercontent.com,REJECT-200
+DOMAIN-SUFFIX,play-spe.livestream.shopee.co.id,REJECT-200
+DOMAIN-SUFFIX,seller.shopee.sg,REJECT-200
 DOMAIN-SUFFIX,sentry.io,REJECT
 DOMAIN-SUFFIX,shope.ee,REJECT
-DOMAIN-SUFFIX,check_channel.shopee.vn,REJECT
+DOMAIN-SUFFIX,check_channel.shopee.vn,REJECT-200
 
 # Original Rules
 RULE-SET,https://raw.githubusercontent.com/bigdargon/hostsVN/master/option/hostsVN-surge-exceptions-rule.conf,DIRECT
