Update CoSN-shadowrocket.conf to reorder DNS servers and modify proxy rules

--- a/CoSN-shadowrocket.conf
+++ b/CoSN-shadowrocket.conf
@@ -2,42 +2,21 @@
 bypass-system = true
 skip-proxy = 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, localhost, *.local, captive.apple.com
 tun-excluded-routes = 10.0.0.0/8, 100.64.0.0/10, 127.0.0.0/8, 169.254.0.0/16, 172.16.0.0/12, 192.0.0.0/24, 192.0.2.0/24, 192.88.99.0/24, 192.168.0.0/16, 198.51.100.0/24, 203.0.113.0/24, 224.0.0.0/4, 255.255.255.255/32, 239.255.255.250/32
-dns-server = 1.1.1.3,2606:4700:4700::1113,9.9.9.11,2620:fe::11
+dns-server = 9.9.9.11, 2620:fe::11,1.1.1.3,2606:4700:4700::1113
 fallback-dns-server = system
 ipv6 = true
-prefer-ipv6 = true
+prefer-ipv6 = false
 private-ip-answer = true
 update-url = https://raw.githubusercontent.com/sontt9/CoSN/master/CoSN-shadowrocket.conf
 
 [Rule]
-# Shopee Adblock Rules
-DOMAIN-SUFFIX,patronus.idata.shopeemobile.com,REJECT-200
-DOMAIN-SUFFIX,live-apm.shopee.vn,REJECT-200
-DOMAIN-SUFFIX,df.infra.sz.shopee.vn,REJECT-200
-DOMAIN-SUFFIX,iv-datatracker.spx.shopee.sg,REJECT-200
-DOMAIN-SUFFIX,event-receiver.shopee.vn,REJECT-200
-DOMAIN-SUFFIX,remote-config.gslb.sgw.shopeemobile.com,REJECT-200
-DOMAIN-SUFFIX,ccms.shopee.io,REJECT-200
-DOMAIN-SUFFIX,deo.shopeemobile.com,REJECT-200
-DOMAIN-SUFFIX,app-vn.deo.susercontent.com,REJECT-200
-DOMAIN-SUFFIX,cdngarenanow-a.akamaihd.net,REJECT-200
-DOMAIN-SUFFIX,livetech.shopee.vn,REJECT-200
-DOMAIN-SUFFIX,livesteaming-api-dr.sp-cdn.susercontent.com,REJECT-200
-DOMAIN-SUFFIX,liveteam.sp-cdn.susercontent.com,REJECT-200
-DOMAIN-SUFFIX,down-ws-vn.img.susercontent.com,REJECT-200
-DOMAIN-SUFFIX,play-spe.livestream.shopee.co.id,REJECT-200
-DOMAIN-SUFFIX,seller.shopee.sg,REJECT-200
-DOMAIN-SUFFIX,sentry.io,REJECT
-DOMAIN-SUFFIX,shope.ee,REJECT
-DOMAIN-SUFFIX,check_channel.shopee.vn,REJECT-200
-
-# Original Rules
 RULE-SET,https://raw.githubusercontent.com/bigdargon/hostsVN/master/option/hostsVN-surge-exceptions-rule.conf,DIRECT
 RULE-SET,https://raw.githubusercontent.com/bigdargon/hostsVN/master/option/hostsVN-surge-rule.conf,REJECT
 #RULE-SET,https://raw.githubusercontent.com/bigdargon/hostsVN/master/option/hostsVN-surge-OTA.conf,REJECT
 #RULE-SET,https://raw.githubusercontent.com/bigdargon/hostsVN/master/option/hostsVN-surge-FB.conf,REJECT
 RULE-SET,https://raw.githubusercontent.com/bigdargon/hostsVN/master/option/hostsVN-surge-rewrite.conf,REJECT
-#RULE-SET,https://raw.githubusercontent.com/bigdargon/hostsVN/master/extensions/gambling/surge-rule.conf,REJECT
+RULE-SET,https://raw.githubusercontent.com/bigdargon/hostsVN/master/extensions/adult/surge-rule.conf,REJECT
+RULE-SET,https://raw.githubusercontent.com/bigdargon/hostsVN/master/extensions/gambling/surge-rule.conf,REJECT
 RULE-SET,https://raw.githubusercontent.com/bigdargon/hostsVN/master/extensions/threat/surge-rule.conf,REJECT
 IP-CIDR,0.0.0.0/32,REJECT,no-resolve
 FINAL,DIRECT
