Update update-youtube-response.yml to add permissions for content writing

--- a/.github/workflows/update-youtube-response.yml
+++ b/.github/workflows/update-youtube-response.yml
@@ -9,12 +9,12 @@ on:
 jobs:
   check-and-update:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Download latest upstream file
         run: |
